# raytracercpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  camera.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  raytracer  rtweekend.hpp  sphere.hpp  vec3.hpp
include/: Camera.hpp  Color.hpp  Hittable.hpp  HittableList.hpp  RTAux.hpp  Ray.hpp  Scenes.hpp  Sphere.hpp  Vec3.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
include/materials/: Dielectric.hpp  IMaterial.hpp  Lambertian.hpp  Metal.hpp
src/: Camera.cpp  HittableList.cpp  Ray.cpp  Sphere.cpp  camera.cpp  hittable_list.cpp  main.cpp  ray.cpp  sphere.cpp
src/materials/: Dielectric.cpp  Lambertian.cpp  Metal.cpp
